update search bar image

--- a/Frameless/Base.lproj/Main.storyboard
+++ b/Frameless/Base.lproj/Main.storyboard
@@ -35,15 +35,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZA-Ao-ZpJ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sadface" translatesAutoresizingMaskIntoConstraints="NO" id="9ud-59-ket">
-                                        <rect key="frame" x="231" y="120" width="138" height="73"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="138" id="NlR-IX-VhT"/>
-                                            <constraint firstAttribute="height" constant="73" id="XHf-yJ-Ezs"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sorry! There was an error loading that URL." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sve-Sf-iR0">
-                                        <rect key="frame" x="210" y="203" width="180" height="56"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Sorry! There was an error loading that URL." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sve-Sf-iR0">
+                                        <rect key="frame" x="210" y="119" width="180" height="56"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="180" id="9XU-ML-8MI"/>
                                         </constraints>
@@ -54,11 +47,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="centerX" secondItem="9ud-59-ket" secondAttribute="centerX" id="4wG-wr-LY1"/>
-                                    <constraint firstItem="9ud-59-ket" firstAttribute="top" secondItem="dZA-Ao-ZpJ" secondAttribute="top" constant="120" id="WHj-vA-2kZ"/>
-                                    <constraint firstAttribute="centerX" secondItem="9ud-59-ket" secondAttribute="centerX" id="WbH-Mm-snh"/>
                                     <constraint firstAttribute="centerX" secondItem="Sve-Sf-iR0" secondAttribute="centerX" id="XMY-8X-DHE"/>
-                                    <constraint firstItem="Sve-Sf-iR0" firstAttribute="top" secondItem="9ud-59-ket" secondAttribute="bottom" constant="10" id="dzs-FE-HS0"/>
                                 </constraints>
                             </view>
                             <searchBar contentMode="redraw" ambiguous="YES" searchBarStyle="minimal" placeholder="Website url" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="50v-cP-i7q" customClass="SearchBar" customModule="Frameless" customModuleProvider="target">
@@ -70,6 +59,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="8hb-PD-BLd"/>
+                            <constraint firstItem="Sve-Sf-iR0" firstAttribute="top" secondItem="50v-cP-i7q" secondAttribute="bottom" constant="75" id="P9y-LR-Yg6"/>
                             <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="RMe-9O-agz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dZA-Ao-ZpJ" secondAttribute="trailing" constant="-16" id="TkV-EE-Bq5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="980-eI-5k4" secondAttribute="trailing" constant="-16" id="Uj0-mw-fTC"/>
@@ -94,8 +84,5 @@
             <point key="canvasLocation" x="139" y="127"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="sadface" width="224" height="258"/>
-    </resources>
     <color key="tintColor" red="0.56927031278610229" green="0.45753145217895508" blue="0.8976520299911499" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
